; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_cx22702.c_cx22702_read_ber.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_cx22702.c_cx22702_read_ber.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.cx22702_state* }
%struct.cx22702_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, i32*)* @cx22702_read_ber to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cx22702_read_ber(%struct.dvb_frontend* %0, i32* %1) #0 {
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.cx22702_state*, align 8
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %7 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %6, i32 0, i32 0
  %8 = load %struct.cx22702_state*, %struct.cx22702_state** %7, align 8
  store %struct.cx22702_state* %8, %struct.cx22702_state** %5, align 8
  %9 = load %struct.cx22702_state*, %struct.cx22702_state** %5, align 8
  %10 = call i32 @cx22702_readreg(%struct.cx22702_state* %9, i32 228)
  %11 = and i32 %10, 2
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %23

13:                                               ; preds = %2
  %14 = load %struct.cx22702_state*, %struct.cx22702_state** %5, align 8
  %15 = call i32 @cx22702_readreg(%struct.cx22702_state* %14, i32 222)
  %16 = and i32 %15, 127
  %17 = shl i32 %16, 7
  %18 = load %struct.cx22702_state*, %struct.cx22702_state** %5, align 8
  %19 = call i32 @cx22702_readreg(%struct.cx22702_state* %18, i32 223)
  %20 = and i32 %19, 127
  %21 = or i32 %17, %20
  %22 = load i32*, i32** %4, align 8
  store i32 %21, i32* %22, align 4
  br label %32

23:                                               ; preds = %2
  %24 = load %struct.cx22702_state*, %struct.cx22702_state** %5, align 8
  %25 = call i32 @cx22702_readreg(%struct.cx22702_state* %24, i32 222)
  %26 = and i32 %25, 127
  %27 = shl i32 %26, 7
  %28 = load %struct.cx22702_state*, %struct.cx22702_state** %5, align 8
  %29 = call i32 @cx22702_readreg(%struct.cx22702_state* %28, i32 223)
  %30 = or i32 %27, %29
  %31 = load i32*, i32** %4, align 8
  store i32 %30, i32* %31, align 4
  br label %32

32:                                               ; preds = %23, %13
  ret i32 0
}

declare dso_local i32 @cx22702_readreg(%struct.cx22702_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
